stablize Ardu Ver1.0 Add log file

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,21 @@ status.txt
 tags
 terrain/
 test.ArduCopter/*
+#配置文件
+*.mdb
+*.ldb
+*.sln
+*.config
+*.creator
+*.creator.user
+*.files
+*.project
+*.cproject
+*.includes
+eclipse.cproject
+eclipse.project
+Debug/
+Release/
+obj/
+/generate_ardupilot_project.sh
+/ardupilot.includes
